[package]
name = "pjproject-sys"
version = "0.1.0"
authors = ["Charles Schleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

[lib]
name = "pjproject"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.65.0"
os_info = "3.7.0"

# pjproject commit = 5dc221e74b95798750644238d822cfc4b3482cd9
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html